[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 1.6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.21473, 1.82402 )

[node name="bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 14
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.00446412 )
scale = Vector2( 0.5, 0.2 )
texture = ExtResource( 1 )

[node name="despawn_timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
